[package]
name = "aoc2023"
authors = ["Jarl Evanson <evanson.jarl@gmail.com"]
edition = "2021"
license = "MIT or Apache-2.0"
readme = true
repository = "https://github.com/JarlEvanson/aoc_2023"
version = "1.0.0"

[profile.release]
overflow-checks = true
debug-assertions = true

[dependencies]
fxhash = "0.2.1"
rand = "0.8.5"
